# lintrec

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: run_tests.yml
lintrec/: __init__.py  cell_clones.py
tests/: test_cell_clones.py
