[project]
name = "lintrec"
description = "Small package containing useful tools to analyze and interpret lineage tracing experiments."
version = "0.1.0"
authors = [
  {name = "A. Corbat", email = "acorbat@ki.se"}
]
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.6"
keywords = ["lineage tracing", "single cell"]
maintainers = [
  {name = "A. Corbat", email = "maintaineragustin.corbat@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Scientific Community"
]
dependencies = [
  'pandera >= 0.16',
  'pandas >= 1.0'
]

[project.optional-dependencies]
dev = [
    "pre-commit"
]

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
